src/test/deca/syntax/invalid/created/sans_objet/unclosed_brace.deca
// Position erreur:
//    16:1
//
// Description:
//    test de programme incorrect syntaxiquement (accolade main non fermée)
//
// Resultats:
//    Erreur
//
// Auteur:
//    Jules
//
// Historique:
//    cree le 11/01/2024

{